--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
   "authors": [
     {
       "name": "Christopher Silva",
-      "email": "xiris@xiris.com.br",
+      "email": "xiris@xiris.com.br"
     }
   ],
   "require": {
