Map files individually

--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,29 @@
       "src/"
     ],
     "files": [
+      "src/helpers/hAdminMenu.php",
+      "src/helpers/hCache.php",
+      "src/helpers/hCategories.php",
+      "src/helpers/hDatabaseInfo.php",
+      "src/helpers/hDefines.php",
+      "src/helpers/hErrors.php",
+      "src/helpers/hItems.php",
+      "src/helpers/hLocale.php",
+      "src/helpers/hLocation.php",
+      "src/helpers/hMessages.php",
+      "src/helpers/hPage.php",
+      "src/helpers/hPagination.php",
+      "src/helpers/hPlugins.php",
+      "src/helpers/hPreference.php",
+      "src/helpers/hPremium.php",
+      "src/helpers/hSanitize.php",
+      "src/helpers/hSearch.php",
+      "src/helpers/hSecurity.php",
+      "src/helpers/hTheme.php",
+      "src/helpers/hTranslations.php",
+      "src/helpers/hUsers.php",
+      "src/helpers/hUtils.php",
+      "src/helpers/hValidate.php",
       "src/alerts.php",
       "src/compatibility.php",
       "src/cron.php",
